Fixed z-index of scroll to top on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -642,6 +642,7 @@ a.theme-link:hover {
 
 .nav-links {
 	display: none;
+	z-index: 110;
 }
 
 .nav-links.expanded {
@@ -656,12 +657,10 @@ a.theme-link:hover {
 	border-top: none;
 	width: 100vw;
 	height: 100vh;
-	padding: 5rem 1rem 1rem 1rem;
+	padding: 1rem 1rem 1rem 1rem;
 	gap: 0.5rem;
 	backdrop-filter: blur(8px);
 	z-index: 110;
-	justify-content: center;
-	align-items: center;
 }
 
 .nav-links.expanded a {
